Preferences drawer z-index bug fix

--- a/src/components/atoms/Drawer/Drawer.scss
+++ b/src/components/atoms/Drawer/Drawer.scss
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     background-color: var(--bg-mask);
-    z-index: 1;
+    z-index: 2;
   }
 
   &__card {
